<resources>
    <string name="app_name">Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="back">back</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="Slash">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="eq">=</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="lf_break">(</string>
    <string name="rg_break">)</string>
    <string name="sqr">sqrt</string>
    <string name="x_y">x^y</string>
    <string name="x">x!</string>
    <string name="_1_x">1/x</string>
    <string name="mod">mod</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="length">长度</string>
    <string name="weight">重量</string>
    <string name="angle">角度</string>
    <string name="temperature">温度</string>
    <string name="time">时间</string>
    <string name="base">进制</string>
    <string name="positive">+/-</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="d">D</string>
</resources>