<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.myapplication.MainActivity">
    <TextView
            android:id="@+id/show_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="viewEnd"
            android:textSize="30sp"
            android:paddingEnd="2dp"
            android:background="@color/colorTextBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.16"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:id="@+id/result_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="viewEnd"
            android:textSize="30sp"
            android:paddingEnd="2dp"
            android:background="@color/colorTextBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:layout_constraintHorizontal_bias="0.0"/>
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:columnCount="4"
            android:id="@+id/gridLayout">
        <Button
                android:text="@string/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_C"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/ce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_CE"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_back"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
        />
        <Button
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_sub"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_mul"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button8"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button9"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/Slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_div"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_point"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button0"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add"
                android:layout_margin="5dp"/>
        <Button
                android:text="@string/eq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_eq"
                android:layout_margin="5dp"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>